defconfig: enable KLAPSE
(cherry picked from commit 8b316b51a6caae1752cc156ff0fdcf8f13df73d3)

--- a/arch/arm64/configs/kirisakura_defconfig
+++ b/arch/arm64/configs/kirisakura_defconfig
@@ -5915,4 +5915,10 @@ CONFIG_STACKDEPOT=y
 CONFIG_STACK_HASH_ORDER_SHIFT=12
 CONFIG_SBITMAP=y
 # CONFIG_STRING_SELFTEST is not set
+
+#
+#Custom Additions
+#
+
 CONFIG_BOEFFLA_WL_BLOCKER=y
+CONFIG_KLAPSE=y
