defconfig: bump and ready for release

--- a/arch/arm64/configs/kirisakura_defconfig
+++ b/arch/arm64/configs/kirisakura_defconfig
@@ -47,7 +47,7 @@ CONFIG_THREAD_INFO_IN_TASK=y
 CONFIG_INIT_ENV_ARG_LIMIT=32
 CONFIG_CROSS_COMPILE=""
 # CONFIG_COMPILE_TEST is not set
-CONFIG_LOCALVERSION="-Kirisakura_Kirin_1.1.0"
+CONFIG_LOCALVERSION="-Kirisakura_Kirin_1.3.0"
 # CONFIG_LOCALVERSION_AUTO is not set
 CONFIG_DEFAULT_HOSTNAME="(none)"
 CONFIG_SWAP=y
@@ -5933,6 +5933,7 @@ CONFIG_TCP_CONG_LP=y
 CONFIG_TCP_CONG_YEAH=y
 CONFIG_TCP_CONG_ILLINOIS=y
 CONFIG_DEFAULT_WESTWOOD=y
+CONFIG_TCP_CONG_AGILESD=y
 CONFIG_DEFAULT_TCP_CONG="westwood"
 
 #
