--- a/arch/arm64/configs/kirisakura_defconfig
+++ b/arch/arm64/configs/kirisakura_defconfig
@@ -47,7 +47,7 @@ CONFIG_THREAD_INFO_IN_TASK=y
 CONFIG_INIT_ENV_ARG_LIMIT=32
 CONFIG_CROSS_COMPILE=""
 # CONFIG_COMPILE_TEST is not set
-CONFIG_LOCALVERSION="-Kirisakura_Kirin_1.6.7"
+CONFIG_LOCALVERSION="-Kirisakura_Kirin_1.8.1"
 # CONFIG_LOCALVERSION_AUTO is not set
 CONFIG_DEFAULT_HOSTNAME="(none)"
 CONFIG_SWAP=y
@@ -5288,6 +5288,7 @@ CONFIG_FAT_DEFAULT_IOCHARSET="iso8859-1"
 # CONFIG_FAT_DEFAULT_UTF8 is not set
 CONFIG_SDFAT_FS=y
 CONFIG_SDFAT_USE_FOR_EXFAT=y
+CONFIG_SDFAT_USE_FOR_TEXFAT=y
 CONFIG_SDFAT_DELAYED_META_DIRTY=y
 CONFIG_SDFAT_SUPPORT_DIR_SYNC=y
 CONFIG_SDFAT_DEFAULT_CODEPAGE=437
