--- a/arch/arm64/configs/kirisakura_defconfig
+++ b/arch/arm64/configs/kirisakura_defconfig
@@ -47,7 +47,7 @@ CONFIG_THREAD_INFO_IN_TASK=y
 CONFIG_INIT_ENV_ARG_LIMIT=32
 CONFIG_CROSS_COMPILE=""
 # CONFIG_COMPILE_TEST is not set
-CONFIG_LOCALVERSION="-Kirisakura_Kirin_1.8.1"
+CONFIG_LOCALVERSION="-Kirisakura_Kirin_2.0.1"
 # CONFIG_LOCALVERSION_AUTO is not set
 CONFIG_DEFAULT_HOSTNAME="(none)"
 CONFIG_SWAP=y
@@ -275,6 +275,9 @@ CONFIG_CC_STACKPROTECTOR=y
 # CONFIG_CC_STACKPROTECTOR_REGULAR is not set
 CONFIG_CC_STACKPROTECTOR_STRONG=y
 CONFIG_THIN_ARCHIVES=y
+# CONFIG_LD_BFD is not set
+CONFIG_LD_LLD=y
+CONFIG_LD_DEAD_CODE_DATA_ELIMINATION=y
 # CONFIG_LTO is not set
 CONFIG_ARCH_SUPPORTS_LTO_CLANG=y
 CONFIG_LTO_NONE=y
@@ -5970,3 +5973,5 @@ CONFIG_QCA_CLD_WLAN=y
 
 CONFIG_INIT_STACK_ALL=y
 CONFIG_INIT_ON_ALLOC_DEFAULT_ON=y
+CONFIG_ARCH_HAS_RELR=y
+CONFIG_RELR=y
